Change in version 0.0.5
------------------------------------------------------------------------------

* use a global variable which is a flag of whether it is under command-line or not.


Change in version 0.0.4
------------------------------------------------------------------------------

* add `cat_prefix` argument in `qqcat` which is prior than `options('cat_prefix')`
  and not globally effective.

Changes in version 0.0.3
------------------------------------------------------------------------------

* If command-line variable is a list, enforce the order of names of elements to 
  be alphabetical (in testing file, tag=%i).
  
* `help` and `version` will not be exported.

Changes in version 0.0.2
------------------------------------------------------------------------------

* add `collapse` option in `qq` so that `qq` can return a vector instead of
  only collapsing them into one string.


Changes in version 0.0.1
------------------------------------------------------------------------------

* the first release